# Biosignal_Processing

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  devenv.nix  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 483588b7edd7_create_users_table.py  ff645647155f_create_signal_amplitudes_table.py
analysis_notebooks/: Signal_Proocessing.ipynb
app/: dependencies.py  main.py  models.py  socket.py
app/routes/: clear_session.py  display.py  health_check.py  login.py  register.py  verify.py
app/static/js/: jquery-3.7.1.slim.js
app/templates/: display.html  display_old.html  login.html  register.html  verify.html
csv_output/: eeg_data_a3_a4_utc.csv
docker-entrypoint-initdb.d/: database_dump.sql
scripts/: .setup.sh.swp  setup.sh  start_db.sh
tests/: conftest.py  test.py
