[tool.poetry]
name = "biosignal-processing"
version = "0.1.0"
description = "A project on analyzing a biosignal"
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
aiohttp = "^3.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"
black = "^24.8.0"
flake8 = "^7.1.0"
isort = "^5.12.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

