[tool.poetry]
name = "biosignal-processing"
version = "0.1.0"
description = "A project on analyzing a biosignal"
authors = ["Yashar Najafi"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
numpy = "^2.0.2"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
greenlet = "^3.1.1"
werkzeug = "^3.1.3"
jinja2 = "^3.1.5"
pydantic = "^2.10.4"
email-validator = "^2.2.0"
python-multipart = "^0.0.20"

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"
black = "^24.8.0"
flake8 = "^7.1.0"
pytest = "^8.1.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

